# flask-spectree

./: .gitignore  LICENSE  README.md  pyproject.toml
flask_spectree/: __init__.py  extension.py  flatten.py
tests/: conftest.py  test_extension.py  test_flatten.py
