
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Flask-Spectree"
version = "0.1.0"
description = "Flask extension for spectree API validation and spec generation"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "spectree>=1.3",
]

[dependency-groups]
dev = [
    "black",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-flask",
    "pytest-randomly",
    "pytest-timeout",
    "ruff",
]

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = ["flask_spectree"]

[tool.pytest.ini_options]
timeout = 15
testpaths = ["tests"]
addopts = "--cov=flask_spectree --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning:spectree.*",
    "ignore::DeprecationWarning:botocore.auth.*"
]

[tool.pyright]
include = ["app", "tests"]
useLibraryCodeForTypes = true
enableExperimentalFeatures = true
verboseOutput = true
venvPath = "."
venv = ".venv"


[tool.ruff.lint]

# B: flake8-bugbear
# C4: flake8-comprehensions
# FLY: flynt (prefer f-strings)
# PERF: perflint (performance anti-patterns)
# PIE: flake8-pie (misc cleanup)
# PLC0415: import-outside-top-level
# RUF: Ruff-specific rules
# SIM: flake8-simplify
# T20: flake8-print (no stray print statements)
# TC004: runtime-import-in-type-checking-block
# UP: pyupgrade
# F401: Unused imports
#
select = ["B", "C4", "FLY", "PERF", "PIE", "PLC0415", "RUF", "SIM", "T20", "TC004", "UP", "F401"]

# C408: Don't flag dict with keyword args; more readable in templating, etc.
# PERF401: list comprehension to create transformed list
ignore = ["C408", "PERF401"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]

# per file ignores for import-outside-top-level; tests are allowed to have
# imports inside functions, so we ignore PLC0415 for all files in the tests
# directory
"tests/*" = ["PLC0415"]

